--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ vignettes/*.pdf
 .Rdata
 .DS_Store
 .quarto
+
+# Large files
+Data/Processed/Chronology/Models_full/26608_*
+Data/Processed/Chronology/Models_full/22759_*
