.gitignore: add large and Temp files

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ Data/Processed/Chronology/Models_full/26608_*
 Data/Processed/Chronology/Models_full/22759_*
 Data/Processed/Chronology/Predicted_ages/*
 Data/Processed/Data_with_chronologies/*
+Data/Processed/Data_harmonised/*
+
+# Temp files
+Data/Temp/*
+
